--- a/index.html
+++ b/index.html
@@ -194,6 +194,45 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="first-part-footer">
+                    <h1>Intersted to woek
+                        with our team?</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+                <button class="lets-talk">Let’s Talk</button>
+            </div>
+        </div>
+        <hr>
+        <div class="column-information-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-info column">
+                        <h1><img src="images/logo-light.png" alt=""> Afrianska</h1>
+                        <p class="first"><span>A.</span>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit.</p>
+                        <p><span>T.</span>+62-812-7313-4321</p>
+                        <p><span>E.</span>hello.afrian@gmail.com.</p>
+                    </div>
+                    <div class="column">
+                        <h1>About US</h1>
+                        <h3>About</h3>
+                        <h3>What We Do</h3>
+                        <h3>Project</h3>
+                        <h3>How It Work With Us</h3>
+                    </div>
+                    <div class="column">
+                        <h1>Follow US</h1>
+                        <h3>Instagram</h3>
+                        <h3>Facebook</h3>
+                        <h3>LinkedIns</h3>
+                        <h3>YouTube</h3>
+                    </div>
+                </div>
+                <p  class="last-words">2019 © Afrianska. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
